# GetterTri

./: .gitignore  CMakeLists.txt  Main.cu  Makefile  README.md  RESULTS.md  nrep_m5_email.ncu-rep  nrep_m5_m10g.ncu-rep  nrep_yt_edge_it.ncu-rep  rep1.ncu-rep  rep_mode5_m10.ncu-rep
Converter/: Makefile  SparseTileConverter.cu  af_shell10.stile  conv_adj_to_metis.py  conv_snap_to_Metis.py  ex.stile  m10.stile  m10_2.stile  m10_p.stile  m11.stile  m12.stile  road_usa.stile  sparse_tile_converter
FileReader/: FileReader.cu  FileReader.h  command_args.cpp  command_args.h
FileReader/Libs/CUDA_Tri_Edge_Iterator/: EdgeIterator.cu  edge_iterator_solver.cu  edge_iterator_solver.h
FileReader/Libs/CUDA_Tri_Node_Iterator/: NodeIterator.cu
FileReader/Libs/CUDA_Tri_Tensor_Multi/: TTC2.cu  TTC3.cu  TTC4.cu  TensorCalculation.cu  TensorUtilities.cu
FileReader/Libs/CommonMethods/: common_methods.cu  common_methods.h
FileReader/Libs/OpenMPTriCalc/: TriangleCountingCPU.cpp
Libs/: ChronoCuda.cu  ChronoCuda.h  CudaUtilities.cu  CudaUtilities.h  GraphReader.cu  GraphReader.h  GraphStats.cu  GraphStats.h  TensorUtilities.cu  TensorUtilities.h  TileReader.cu  TileReader.h
Mode/Iterator/Edge/: E.cu  Makefile
Mode/Iterator/EdgeForward/: EF.cu  Makefile
Mode/Iterator/EdgeWarped/: EW.cu  Makefile
Mode/Iterator/Node/: Makefile  N.cu
Mode/Tensor Core/Block Full Tile/: Makefile  TTC_BFT.cu
Mode/Tensor Core/Block Hadamard Full Operation/: Makefile  TTC_BHFO.cu
Mode/Tensor Core/Block Hadamard Sparse Operation/: Makefile  TTC_BHSO.cu
Mode/Tensor Core/SparseTileReader/compute/: Makefile  ST_compute.cu
Mode/Tensor Core/SparseTileReader/converter/: Makefile  ST_converter.cu
dataset/: Makefile  conv_metis_to_mtx.cpp  conv_metis_to_mtx.py  conv_mtx_to_Metis.py  conv_mtx_to_metis.cpp  conv_snap_to_metis.cpp  conv_snap_to_mtx.cpp  m10.mtx
dataset/af_shell10/: Makefile
dataset/asia.osm/: Makefile
dataset/citationCiteseer/: Makefile
dataset/coAuthorsDBLP/: Makefile
dataset/coPapersDBLP/: Makefile
dataset/com-LiveJournal/: Makefile
dataset/com-Orkut/: Makefile
dataset/com-Youtube/: Makefile
dataset/italy.osm/: Makefile
dataset/nlpkkrt160/: Makefile
dataset/roadNet-Ca/: Makefile
dataset/road_usa/: Makefile
dataset/thermal2/: Makefile
